Updated swagger.yaml for resume routes
