# server/src/api/resumes/resumes.controller.js
@@ -8,40 +8,6 @@ import multer from "multer";
 var storage = multer.memoryStorage();
 var upload = multer({ storage: storage });
 
-/**
- * @swagger
- *
- * /resumes/manual:
- *   post:
- *     summary: Create Resume from JSON
- *     tags: [Resumes]
- *     security:
- *       - bearerAuth: []
- *     requestBody:
- *       description: JSON data for resume
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/ResumeData'
- *     responses:
- *       '200':
- *         description: Successfully created resume
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ResumeData'
- *       '500':
- *         description: Internal Server Error
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- */
 router.post(
   "/manual",
   // ClerkExpressRequireAuth({ authorizedParties: [process.env.CLIENT_URL] }),
@@ -58,54 +24,6 @@ router.post(
   }
 );
 
-/**
- * @swagger
- *
- * /resumes:
- *   post:
- *     summary: Upload PDF to create resume
- *     tags: [Resumes]
- *     security:
- *       - bearerAuth: []
- *     requestBody:
- *       required: true
- *       content:
- *         multipart/form-data:
- *           schema:
- *             type: object
- *             properties:
- *               file:
- *                 type: string
- *                 format: binary
- *                 description: PDF file to upload
- *     responses:
- *       '200':
- *         description: Successfully created resume
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ResumeData'
- *       '400':
- *         description: Bad request
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- *       '500':
- *         description: Internal Server Error
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- */
 router.post(
   "/",
   upload.single("file"),
@@ -127,35 +45,6 @@ router.post(
   }
 );
 
-/**
- * @swagger
- *
- * /resumes/all:
- *   get:
- *     summary: Get all resumes by user ID
- *     tags: [Resumes]
- *     security:
- *       - bearerAuth: []
- *     responses:
- *       '200':
- *         description: A list of resumes belonging to the user
- *         content:
- *           application/json:
- *             schema:
- *               type: array
- *               items:
- *                 $ref: '#/components/schemas/ResumeData'
- *       '500':
- *         description: Internal Server Error
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- */
 router.get(
   "/all",
   // ClerkExpressRequireAuth({ authorizedParties: [process.env.CLIENT_URL] }),
@@ -171,50 +60,6 @@ router.get(
   }
 );
 
-/**
- * @swagger
- *
- * /resumes/{id}:
- *   get:
- *     summary: Get Resume by ID
- *     parameters:
- *       - in: path
- *         name: id
- *         required: true
- *         schema:
- *           type: string
- *         description: User ID
- *     tags: [Resumes]
- *     security:
- *       - bearerAuth: []
- *     responses:
- *       '200':
- *         description: Retrieved resume
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ResumeData'
- *       '404':
- *         description: Resume not found
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- *       '500':
- *         description: Internal Server Error
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- */
 router.get(
   "/:id",
   // ClerkExpressRequireAuth({ authorizedParties: [process.env.CLIENT_URL] }),
@@ -229,64 +74,6 @@ router.get(
   }
 );
 
-/**
- * @swagger
- *
- * /{id}:
- *   put:
- *     summary: Update a resume by ID
- *     parameters:
- *       - in: path
- *         name: id
- *         required: true
- *         schema:
- *           type: string
- *         description: Resume ID
- *     tags: [Resumes]
- *     security:
- *       - bearerAuth: []
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/ResumeData'
- *         multipart/form-data:
- *           schema:
- *             type: object
- *             properties:
- *               file:
- *                 type: string
- *                 format: binary
- *                 description: PDF file to upload
- *     responses:
- *       '200':
- *         description: Resume updated successfully
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ResumeData'
- *       '400':
- *         description: Bad request
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- *       '500':
- *         description: Internal Server Error
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- */
 router.put("/:id", upload.single("file"), async (req, res) => {
   try {
     const id = req.params.id;
@@ -303,54 +90,6 @@ router.put("/:id", upload.single("file"), async (req, res) => {
   }
 });
 
-/**
- * @swagger
- *
- * /resumes/{id}:
- *   delete:
- *     summary: Delete a resume by ID
- *     parameters:
- *       - in: path
- *         name: id
- *         required: true
- *         schema:
- *           type: string
- *         description: Resume ID
- *     tags: [Resumes]
- *     security:
- *       - bearerAuth: []
- *     responses:
- *       '200':
- *         description: Resume deleted successfully
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Success message
- *       '404':
- *         description: Resume not found
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- *       '500':
- *         description: Internal Server Error
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   description: Error message
- */
 router.delete("/:id", async (req, res) => {
   try {
     const id = req.params.id;
