# server/src/swagger.yaml
@@ -514,3 +514,228 @@ paths:
                 properties:
                   settings:
                     type: object
+
+  /resumes/manual:
+    post:
+      summary: Create Resume from JSON
+      tags:
+        - Resumes
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: JSON data for resume
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ResumeData"
+      responses:
+        "200":
+          description: Successfully created resume
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResumeData"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+  /resumes:
+    post:
+      summary: Upload PDF to create resume
+      tags:
+        - Resumes
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                  description: PDF file to upload
+      responses:
+        "200":
+          description: Successfully created resume
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResumeData"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+  /resumes/all:
+    get:
+      summary: Get all resumes by user ID
+      tags:
+        - Resumes
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: A list of resumes belonging to the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ResumeData"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+  /resumes/{id}:
+    get:
+      summary: Get Resume by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: User ID
+      tags:
+        - Resumes
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Retrieved resume
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResumeData"
+        "404":
+          description: Resume not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+    put:
+      summary: Update a resume by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: Resume ID
+      tags:
+        - Resumes
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ResumeData"
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                  description: PDF file to upload
+      responses:
+        "200":
+          description: Resume updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResumeData"
+        "400":
+          description: Bad request
+          content: applic
+    delete:
+      summary: Delete a resume by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: Resume ID
+      tags:
+        - Resumes
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Resume deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Success message
+        "404":
+          description: Resume not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
